--- a/RESTInventoryTracker/src/main/resources/application.properties
+++ b/RESTInventoryTracker/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventorytrackerdb?useSSL=fals
 spring.datasource.username=supply
 spring.datasource.password=supply
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jmx.default-domain=InventoryTracker
